--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,1 +1,10 @@
+<h1>URLtje</h1>
+<p>Enter the URL you would like shortened:</p>
+
+<%= form_for Link.new, url: '/links' do |f| %>
+  <%= f.text_field :original_url %>
+  <%= f.submit "Get Short URL" %>
+<% end %>
+
+
 
