--- a/app/assets/stylesheets/links.scss
+++ b/app/assets/stylesheets/links.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the links controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+ul {
+  list-style-type: none;
+}
+
+form {
+  text-align: center;
+}
+
+p {
+  text-align: center;
+}
+
+h1 {
+  text-align: center;
+}
