added some basic front end

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,8 +1,11 @@
-<h1>URLtje</h1>
+<header>
+  <h1>URLtje</h1>
+</header>
 <div class="container">
   <div class="form">
     <ul>
       <li> <p>Enter the URL you would like shortened:</p> </li>
+      <li> <p>Please only enter a full link including http:// or https://</p></li>
           <%= form_for Link.new, url: '/links' do |f| %>
       <li>  <%= f.text_field :original_url %> </li>
       <li>  <%= f.submit "Get Short URL" %> </li>
