--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,3 +1,10 @@
-<h1>Here's your short link!</h1>
-<p><%= @short_url %></p>
+<header>
+  <h1>URLtje</h1>
+</header>
+<div class="container">
+  <h1>Here's your short link!</h1>
+  <p><%= @short_url %></p>
+  <p class="back"><%= link_to "Back", root_path %></p>
+</div>
+
 
