--- a/app/assets/stylesheets/links.scss
+++ b/app/assets/stylesheets/links.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the links controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+body {
+  font-family: Times, serif;
+}
+
 ul {
   list-style-type: none;
 }
@@ -9,10 +13,29 @@ form {
   text-align: center;
 }
 
+li {
+  margin: 5px;
+}
+
 p {
   text-align: center;
 }
 
 h1 {
   text-align: center;
+}
+
+header {
+  background-color: #427AA1;
+  padding: 50px 0;
+  margin-bottom: 10px;
+}
+
+.container {
+  background-color: #EBF2FA;
+  padding: 150px 0;
+}
+
+.back {
+  text-decoration: none;
 }
